# wai-static-th

./: .envrc  .gitignore  README.md  default.nix  wai-static-th.cabal
src/Network/Wai/Static/: TH.hs
