cabal-version: >= 1.10
name: wai-static-th
version: 0.1.0
build-type: Simple
license: MIT
license-file: LICENSE

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
               -Wcompat
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wredundant-constraints
               -Wno-missing-signatures
  exposed-modules: Network.Wai.Static.TH
  build-depends: base
               , bytestring
               , cryptonite
               , file-embed
               , filepath
               , http-types
               , mime-types
               , template-haskell
               , text
               , wai
